--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "javascript.inlayHints.propertyDeclarationTypes.enabled": true,
     "typescript.inlayHints.propertyDeclarationTypes.enabled": false,
     "typescript.inlayHints.parameterNames.suppressWhenArgumentMatchesName": true,
-    "typescript.inlayHints.variableTypes.suppressWhenTypeMatchesName": false
+    "typescript.inlayHints.variableTypes.suppressWhenTypeMatchesName": false,
+    "vue.features.codeActions.enable": false
 }
